Fix font style for links on safari

--- a/assets/css/globals.sass
+++ b/assets/css/globals.sass
@@ -62,6 +62,9 @@ a
     &:visited
         color: inherit
 
+a, button
+    font-family: $fontstack-bold
+
 ul
     list-style: none
     margin: 0
@@ -80,7 +83,6 @@ button
         box-shadow: 0 0 0 0 adjust-hue(#000, 45deg)
 
 .btn
-    font-size: $basefont
     color: white
     text-align: center
     white-space: nowrap
