--- a/assets/fonts/fonts.sass
+++ b/assets/fonts/fonts.sass
@@ -20,6 +20,14 @@
     font-display: swap
 
 @font-face
+    font-family: 'SF Pro Display'
+    src: local("SF Pro Display"), url(~assets/fonts/SFProText-Regular/SFProDisplay-Regular.ttf) format("truetype")
+    font-weight: normal
+    font-style: normal
+    font-display: swap
+
+
+@font-face
     font-family: 'SF Pro Text'
     src: local("SF Pro Text"), url(~assets/fonts/SFProText-Regular/SFProText-Regular.ttf) format("truetype")
     font-weight: normal
